--- a/TestProject/wwwroot/index.html
+++ b/TestProject/wwwroot/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test</title>
+    <title>TestProject</title>
     <base href="/" />
     <link rel="stylesheet" href="css/app.css" />
     <!-- If you add any scoped CSS files, uncomment the following to load them
-    <link href="Test.styles.css" rel="stylesheet" /> -->
+    <link href="TestProject.styles.css" rel="stylesheet" /> -->
 </head>
 
 <body>
